[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-builder"
version = "0.1.0"
description = "A Streamlit app for building downloadable prompts from MD blocks."
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
]

[project.scripts]
run-app = "streamlit:run"

[tool.ruff]
line-length = 88

[tool.uv]
# UV configuration if needed
